Fixed stretched content due to improperly loaded click event overlay.

--- a/assets/scss/supporting/front-page.scss
+++ b/assets/scss/supporting/front-page.scss
@@ -1,8 +1,5 @@
 /* Custom SCSS
 ----------------------------------------------------------------------------- */
-body {
-  height: 100vh;
-}
 #overlay{
   z-index: 2;
   position: fixed;
